objects/BMCServiceDesk__UserPreferences__c.object
<CustomObject>
    <description>Stores user&apos;s Remedyforce console customization  preferences.</description>
    <fields>
        <fullName>BMCServiceDesk__BroadcastViewPreferences__c</fullName>
        <description>It stores column preferences of user for console Broadcast Listview.</description>
        <label>BroadcastViewPreferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChangeRequestViewPreferences__c</fullName>
        <description>It stores column preferences of user for console Change Request Listview.</description>
        <label>ChangeRequestViewPreferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConsolePreferences__c</fullName>
        <description>Stores user preferences applicable to Remedyforce Console</description>
        <label>Console Preferences</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IncidentViewPreferences__c</fullName>
        <description>It stores column preferences of user for console  Incident Listview.</description>
        <label>IncidentViewPreferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ListViewLoadPreferences__c</fullName>
        <description>It stores sorting and filter preferences of user for console Listview.</description>
        <label>ListViewLoadPreferences</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MetricBarPreferences__c</fullName>
        <description>It stores selected metric cards ids.</description>
        <label>Metric Bar Preferences</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProblemViewPreferences__c</fullName>
        <description>It stores column preferences of user for console Problem Listview.</description>
        <label>ProblemViewPreferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ReleaseViewPreferences__c</fullName>
        <description>It stores column preferences of user for console Release Listview.</description>
        <label>ReleaseViewPreferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceOutageViewPreferences__c</fullName>
        <description>It stores column preferences of user for console Service Outage Listview.</description>
        <label>ServiceOutageViewPreferences</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceRequestViewPreferences__c</fullName>
        <description>It stores column preferences of user for console Service Request Listview.</description>
        <label>ServiceRequestViewPreferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ShowMetricBar__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Metric Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TaskViewPreferences__c</fullName>
        <description>It stores column preferences of user  for  console task Listview.</description>
        <label>TaskViewPreferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to refer link between user and user&apos;s console column customization preferences.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Preference</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>